--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						</li>
             </li>
 						<li class="nav__item">
-							<a href="shop" class="nav__link">SHOP</a>
+							<a href="shop.html" class="nav__link">SHOP</a>
 						</li>
             <li class="nav__item">
 							<a href="https://fruitigames.repl.co" class="nav__link">GAMES</a>
