--- a/shop.html
+++ b/shop.html
@@ -30,6 +30,13 @@
     }
   </style>
 </head>
+  <div class="nav__menu" id="nav-menu">
+					<ul class="nav__list">
+            <li class="nav__item">
+							<a href="index.html" class="nav__link">BACK</a>
+						</li>
+					</ul>
+				</div>
 <body>
   <div class="container">
     <h1>Welcome to the Robux Merch Store!</h1>
