--- a/shop.html
+++ b/shop.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+	<link rel="stylesheet" href="/src/assets/Css/style.css" />
+		<link rel="stylesheet" href="/src/assets/Css/template.css" />
 <head>
   <title>Merch Store</title>
   <style>
