--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
             <li class="nav__item">
 							<a href="https://fruitigames.repl.co" class="nav__link">GAMES</a>
 						</li>
+												</li>
+            <li class="nav__item">
+							<a href="extras.html" class="nav__link">EXTRAS</a>
+						</li>
 					</ul>
 				</div>
 
