--- a/goldenlogin.html
+++ b/goldenlogin.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-      <title>HTML Login Form</title>
+      <title>Login To Golden Fruiti</title>
       <link rel="stylesheet" href="golden.css">
 </head>
 
 <body>
       <div class="main">
-            <h1>GeeksforGeeks</h1>
+            <h1>Golden Fruiti</h1>
             <h3>Enter your login credentials</h3>
             <form action="">
                   <label for="first">
