--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
 			<section class="about section" id="about">
 				<div class="about__container bd-grid">
 					<div>
-						<h2 class="about__subtitle reveal">About Us</h2>
+						<h2 class="about__subtitle reveal">Biography</h2>
 						<p class="about__text reveal">
-							We are a youtuber which only got over 1k subs! We have a lot of plans so make sure to like and subcribe to support the content! Remember that the more subs, the more content!
+							We are a youtuber which only got over 5k subs! We have a lot of plans so make sure to like and subcribe to support the content! Remember that the more subs, the more content!
 						</p>
 					</div>
 
