--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 				></a>
 			</div>
 
-			<p>&#169; 2023 copyright <span>FruitiGaming</span>.</p>
+			<p>&#169; 2023 - 2024 copyright <span>FruitiGaming</span>.</p>
 		</footer>
 		<script src="/src/scripts/script.js"></script>
 	</body>
