--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						</li>
 												</li>
             <li class="nav__item">
-							<a href="extras.html" class="nav__link">EXTRAS</a>
+							<a href="discord" class="nav__link">DISCORD</a>
 						</li>
 					</ul>
 				</div>
