--- a/discord.html
+++ b/discord.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Join Our Discord Server</title>
+  <title>FruitiGaming Discor Server</title>
   <link rel="stylesheet" href="discord.css">
 </head>
 <body>
