--- a/discord.html
+++ b/discord.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>FruitiGaming Discor Server</title>
+  <title>FruitiGaming Discord Server</title>
   <link rel="stylesheet" href="discord.css">
 </head>
 <body>
   <header>
     <h1>Welcome to Our Discord Server!</h1>
     <p>Connect, chat, and grow with our amazing community.</p>
-    <a href="https://discord.gg/yourinvitecode" class="join-btn">Join Now</a>
+    <a href="https://discord.gg/aJbjFpA9fj" class="join-btn">Join Now</a>
   </header>
 
   <section class="features">
