--- a/discord.html
+++ b/discord.html
@@ -12,7 +12,7 @@
     <p>Connect, chat, and grow with our amazing community.</p>
     <a href="https://discord.gg/aJbjFpA9fj" class="join-btn">Join Now</a>
   </header>
-
+<iframe src="https://discord.com/widget?id=1094531916096622652&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
   <section class="features">
     <div class="feature">
       <h2>Friendly Community</h2>
