--- a/discord.html
+++ b/discord.html
@@ -29,7 +29,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Our Discord Server. All rights reserved.</p>
+    <p>&copy; 2025 FruitiGaming. All rights reserved.</p>
   </footer>
 </body>
 </html>
